kg changes
